change by other developers

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fullcalendar/common": "^5.11.0",
+    "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
